@@ -1,5 +1,6 @@
 package com.programmingmicroservice.productservice.service.impl;
 
+
 import com.programmingmicroservice.productservice.dto.ProductRequest;
 import com.programmingmicroservice.productservice.dto.ProductResponse;
 import com.programmingmicroservice.productservice.model.Product;
@@ -10,7 +11,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -21,18 +21,30 @@ public class ProductServiceImpl implements ProductService {
 
     @Override
     public void createProduct(ProductRequest productRequest) {
-        productRepository.save(ProductRequest.toEntity(productRequest));
-        log.info("Product {} is saved ", productRequest.getId());
+        Product product = Product.builder()
+                .name(productRequest.getName())
+                .description(productRequest.getDescription())
+                .price(productRequest.getPrice())
+                .build();
+
+        productRepository.save(product);
+        log.info("Product {} is saved", product.getId());
     }
+
 
     @Override
     public List<ProductResponse> getAllProducts() {
         List<Product> products = productRepository.findAll();
-        return products
-                .stream()
-                .map(ProductResponse::fromEntity)
-                .collect(Collectors.toList());
+
+        return products.stream().map(this::mapToProductResponse).toList();
     }
 
-
+    private ProductResponse mapToProductResponse(Product product) {
+        return ProductResponse.builder()
+                .id(product.getId())
+                .name(product.getName())
+                .description(product.getDescription())
+                .price(product.getPrice())
+                .build();
+    }
 }
